# smia-ogc-api

./: .dockerignore  .gitignore  README.md  catalog-info.yaml  compose.yaml  pygeoapi-config.yml  pygeoapi-openapi.yml  pyproject.toml  run_local.sh  synthetic-monitoring.yaml
.github/: CODEOWNERS  SECURITY.md  dependabot.yml  pull_request_template.md
.github/agents/: kartverket-standard.agent.md
.github/workflows/: build-push-deploy.yaml  codeql.yml  dependency-review.yml  ruff.yml  validate-synthetic-monitoring-config.yml
.security/: description.yaml
.security/risc/: risc-IRgir.risc.yaml
deploy/: Dockerfile  entrypoint.py  gunicorn_conf.py  requirements.txt  start.py  wsgi.py
dev/: init-db.sql
docs/: api-key.md  boplikt-matrikkel-forklaring.md  bopliktsjekken.md  dataflyt.md
processes/: boplikt.py  boplikt_check.py  boplikt_matrikkelenhetsnummer.py  bopliktsjekk.py  bopliktsjekk_geometri.py  matrikkel_client.py
processes/utils/: boplikt_db.py  boplikt_metadata.py  matrikkel_client.py  matrikkel_geometry.py
