[project]
name = "boplikt"
version = "0.1.0"
description = "OGC API for administrative inndelinger og bopliktsjekk, bygd med pygeoapi"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask-cors>=6.0.5",
    "geoalchemy2>=0.18.1",
    "gevent>=25.9.1",
    "gunicorn>=25.0.3",
    "json-log-formatter>=1.2.1",
    "prometheus-flask-exporter>=0.23.2",
    "psycopg2-binary>=2.9.11",
    "pygeoapi>=0.23.4",
    "shapely>=2.0",
    "zeep>=4.3.3",
]

[dependency-groups]
dev = [
    "ruff>=0.15.20",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
extend-select = [
    "I",
    "UP",
    "B",
]
ignore = [
    "B905",
]
